<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/btn_ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        android:background="@drawable/ic_back_arrow"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSignup"
        android:contentDescription="@string/back_image_button" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="42sp"
        android:layout_marginTop="65dp"
        android:layout_marginStart="33dp"
        android:textColor="#7364FF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="33dp"
        android:background="#E8E7FF"/>
    
    <LinearLayout
        android:id="@+id/llUsernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="33dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvSignup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="#525252"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingHorizontal="8dp"
            android:inputType="text"
            android:background="@drawable/background_edittext_radius_with_10_dp"
            android:autofillHints="username"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmailAdressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/llUsernameContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_adress"
            android:textSize="15sp"
            android:textColor="#525252"
            />

        <EditText
            android:id="@+id/etEmailAdress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingHorizontal="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/example_example_com"
            android:background="@drawable/background_edittext_radius_with_10_dp"
            android:autofillHints="email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSuPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/llEmailAdressContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="#525252"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <EditText
                android:id="@+id/etSuPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingHorizontal="8dp"
                android:inputType="textPassword"
                android:hint="@string/_8_characters"
                android:background="@drawable/background_edittext_radius_with_10_dp"
                android:autofillHints="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/ivSuToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="33dp"
        android:elevation="5dp"
        android:background="@drawable/background_button"
        android:text="@string/register"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSuPasswordContainer"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:src="@drawable/ic_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        android:contentDescription="@string/register_page_image" />

</androidx.constraintlayout.widget.ConstraintLayout>